--- a/debugger/watchpropertydlg.lfm
+++ b/debugger/watchpropertydlg.lfm
@@ -2,55 +2,59 @@ object WatchPropertyDlg: TWatchPropertyDlg
   Caption = 'Watch Properties'
   ClientHeight = 206
   ClientWidth = 420
+  PixelsPerInch = 95
   Position = poScreenCenter
-  HorzScrollBar.Page = 421
-  VertScrollBar.Page = 207
+  HorzScrollBar.Page = 419
+  VertScrollBar.Page = 205
   Left = 358
   Height = 206
   Top = 238
   Width = 420
   object lblExpression: TLabel
     Caption = 'Expression:'
+    Color = clNone
+    ParentColor = False
     Left = 16
-    Height = 17
+    Height = 13
     Top = 14
     Width = 65
   end
+  object lblRepCount: TLabel
+    Caption = 'Repeat Count:'
+    Color = clNone
+    ParentColor = False
+    Left = 15
+    Height = 13
+    Top = 45
+    Width = 80
+  end
+  object lblDigits: TLabel
+    Caption = 'Digits:'
+    Color = clNone
+    ParentColor = False
+    Left = 176
+    Height = 13
+    Top = 45
+    Width = 35
+  end
   object txtExpression: TEdit
-    TabOrder = 2
-    TabOrder = 2
+    TabOrder = 1
     Left = 105
     Height = 23
     Top = 8
     Width = 300
   end
-  object lblRepCount: TLabel
-    Caption = 'Repeat Count:'
-    Left = 15
-    Height = 17
-    Top = 45
-    Width = 80
-  end
   object txtRepCount: TEdit
-    TabOrder = 4
+    TabOrder = 2
     Text = '0'
-    TabOrder = 4
     Left = 105
     Height = 23
     Top = 39
     Width = 60
   end
-  object lblDigits: TLabel
-    Caption = 'Digits:'
-    Left = 176
-    Height = 17
-    Top = 45
-    Width = 40
-  end
   object txtDigits: TEdit
-    TabOrder = 6
+    TabOrder = 5
     Text = '0'
-    TabOrder = 6
     Left = 225
     Height = 23
     Top = 39
@@ -58,28 +62,33 @@ object WatchPropertyDlg: TWatchPropertyDlg
   end
   object chkEnabled: TCheckBox
     AllowGrayed = True
-    AutoSize = True
     Caption = 'Enabled'
-    DragCursor = 65524
     TabOrder = 7
     Left = 15
     Height = 20
     Top = 65
-    Width = 84
+    Width = 73
   end
   object chkAllowFunc: TCheckBox
     AllowGrayed = True
-    AutoSize = True
     Caption = 'Allow Function Calls'
-    DragCursor = 65524
     TabOrder = 0
     Left = 105
     Height = 20
     Top = 65
-    Width = 1
+    Width = 143
   end
   object rgStyle: TRadioGroup
+    AutoFill = True
     Caption = 'Style'
+    ChildSizing.LeftRightSpacing = 6
+    ChildSizing.TopBottomSpacing = 6
+    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+    ChildSizing.EnlargeVertical = crsHomogenousChildResize
+    ChildSizing.ShrinkHorizontal = crsScaleChilds
+    ChildSizing.ShrinkVertical = crsScaleChilds
+    ChildSizing.Layout = cclLeftToRightThenTopToBottom
+    ChildSizing.ControlsPerLine = 3
     Columns = 3
     ItemIndex = 7
     Items.Strings = (
@@ -93,36 +102,40 @@ object WatchPropertyDlg: TWatchPropertyDlg
       'Default'
       'Memory Dump'
     )
-    ParentColor = True
+    TabOrder = 3
     Left = 15
     Height = 78
     Top = 90
     Width = 390
   end
   object btnOK: TButton
+    BorderSpacing.InnerBorder = 4
     Caption = 'OK'
     Default = True
     ModalResult = 1
     OnClick = btnOKClick
-    TabOrder = 9
+    TabOrder = 4
     Left = 170
     Height = 25
     Top = 176
     Width = 75
   end
   object btnCancel: TButton
+    BorderSpacing.InnerBorder = 4
     Cancel = True
     Caption = 'Cancel'
     ModalResult = 2
-    TabOrder = 10
+    TabOrder = 6
     Left = 250
     Height = 25
     Top = 176
     Width = 75
   end
   object btnHelp: TButton
+    BorderSpacing.InnerBorder = 4
     Caption = 'Help'
-    TabOrder = 11
+    OnClick = btnHelpClick
+    TabOrder = 8
     Left = 330
     Height = 25
     Top = 176
