improved laz_xmlcfg.TXmlConfig to delete unused parent nodes
 SVN 9633@trunk

--- a/ide/idecontexthelpedit.lfm
+++ b/ide/idecontexthelpedit.lfm
@@ -36,7 +36,7 @@ object ContextHelpEditorDlg: TContextHelpEditorDlg
     end
     object CreateHelpNodeForControlButton: TButton
       Align = alBottom
-      
+      BorderSpacing.InnerBorder = 4
       Caption = 'CreateHelpNodeForControlButton'
       OnClick = CreateHelpNodeForControlButtonClick
       TabOrder = 1
@@ -46,7 +46,7 @@ object ContextHelpEditorDlg: TContextHelpEditorDlg
     end
     object TestButton: TButton
       Align = alBottom
-      
+      BorderSpacing.InnerBorder = 4
       Caption = 'TestButton'
       OnClick = TestButtonClick
       TabOrder = 2
@@ -152,7 +152,6 @@ object ContextHelpEditorDlg: TContextHelpEditorDlg
       Align = alRight
       Anchors = [akTop, akRight]
       BorderSpacing.Around = 6
-      
       Caption = 'CancelBitBtn'
       ModalResult = 2
       NumGlyphs = 0
@@ -167,7 +166,6 @@ object ContextHelpEditorDlg: TContextHelpEditorDlg
       Anchors = [akTop, akRight]
       BorderSpacing.Right = 15
       BorderSpacing.Around = 6
-      
       Caption = 'OkBitBtn'
       Default = True
       ModalResult = 1
