--- a/components/h2pas/h2pasdlg.lfm
+++ b/components/h2pas/h2pasdlg.lfm
@@ -1,43 +1,49 @@
 object H2PasDialog: TH2PasDialog
   Caption = 'H2PasDialog'
-  ClientHeight = 534
+  ClientHeight = 501
   ClientWidth = 785
   KeyPreview = True
+  OnCloseQuery = FormCloseQuery
   OnCreate = FormCreate
+  OnDestroy = FormDestroy
   OnKeyDown = FormKeyDown
   PixelsPerInch = 112
   HorzScrollBar.Page = 784
-  VertScrollBar.Page = 533
+  VertScrollBar.Page = 500
   Left = 326
-  Height = 534
+  Height = 501
   Top = 178
   Width = 785
   object MainPageControl: TPageControl
-    ActivePage = FilesTabSheet
-    Align = alClient
-    TabIndex = 0
+    ActivePage = h2pasOptionsTabSheet
+    Align = alTop
+    Anchors = [akTop, akLeft, akRight, akBottom]
+    TabIndex = 1
     TabOrder = 0
-    Height = 534
+    AnchorSideBottom.Control = OpenSettingsButton
+    Height = 465
     Width = 785
     object FilesTabSheet: TTabSheet
       Caption = 'FilesTabSheet'
-      ClientHeight = 504
+      ClientHeight = 435
       ClientWidth = 781
       Left = 2
-      Height = 504
+      Height = 435
       Top = 28
       Width = 781
       object CHeaderFilesCheckListBox: TCheckListBox
         Align = alLeft
+        OnItemClick = CHeaderFilesCheckListBoxItemClick
         TabOrder = 0
         TopIndex = -1
-        Height = 504
+        Height = 435
         Width = 255
       end
       object AddCHeaderFilesButton: TButton
         BorderSpacing.Left = 6
         BorderSpacing.InnerBorder = 4
         Caption = 'AddCHeaderFilesButton'
+        OnClick = AddCHeaderFilesButtonClick
         TabOrder = 1
         AnchorSideLeft.Control = CHeaderFilesSplitter1
         AnchorSideLeft.Side = asrBottom
@@ -50,6 +56,7 @@ object H2PasDialog: TH2PasDialog
         BorderSpacing.Left = 6
         BorderSpacing.InnerBorder = 4
         Caption = 'DeleteCHeaderFilesButton'
+        OnClick = DeleteCHeaderFilesButtonClick
         TabOrder = 2
         AnchorSideLeft.Control = CHeaderFilesSplitter1
         AnchorSideLeft.Side = asrBottom
@@ -62,6 +69,7 @@ object H2PasDialog: TH2PasDialog
         BorderSpacing.Left = 6
         BorderSpacing.InnerBorder = 4
         Caption = 'SelectAllCHeaderFilesButton'
+        OnClick = SelectAllCHeaderFilesButtonClick
         TabOrder = 3
         AnchorSideLeft.Control = CHeaderFilesSplitter1
         AnchorSideLeft.Side = asrBottom
@@ -74,6 +82,7 @@ object H2PasDialog: TH2PasDialog
         BorderSpacing.Left = 6
         BorderSpacing.InnerBorder = 4
         Caption = 'UnselectAllCHeaderFilesButton'
+        OnClick = UnselectAllCHeaderFilesButtonClick
         TabOrder = 4
         AnchorSideLeft.Control = CHeaderFilesSplitter1
         AnchorSideLeft.Side = asrBottom
@@ -83,13 +92,353 @@ object H2PasDialog: TH2PasDialog
         Width = 185
       end
       object CHeaderFilesSplitter1: TSplitter
-        Height = 504
+        Height = 435
         Width = 5
         Cursor = crHSplit
         Left = 255
-        Height = 504
+        Height = 435
         Width = 5
       end
     end
+    object h2pasOptionsTabSheet: TTabSheet
+      Caption = 'h2pasOptionsTabSheet'
+      ClientHeight = 435
+      ClientWidth = 781
+      Left = 2
+      Height = 435
+      Top = 28
+      Width = 781
+      object LibNameLabel: TLabel
+        BorderSpacing.Top = 10
+        Caption = 'LibNameLabel'
+        Color = clNone
+        ParentColor = False
+        AnchorSideTop.Control = LibnameEdit
+        AnchorSideTop.Side = asrCenter
+        Left = 6
+        Height = 13
+        Top = 116
+        Width = 81
+      end
+      object OutputExtLabel: TLabel
+        Caption = 'OutputExtLabel'
+        Color = clNone
+        ParentColor = False
+        AnchorSideTop.Control = OutputExtEdit
+        AnchorSideTop.Side = asrCenter
+        Left = 6
+        Height = 13
+        Top = 301
+        Width = 86
+      end
+      object OutputDirLabel: TLabel
+        Caption = 'OutputDirLabel'
+        Color = clNone
+        ParentColor = False
+        AnchorSideTop.Control = OutputDirEdit
+        AnchorSideTop.Side = asrCenter
+        Left = 6
+        Height = 13
+        Top = 330
+        Width = 85
+      end
+      object UseExternalCheckBox: TCheckBox
+        Caption = 'UseExternalCheckBox'
+        OnChange = UseExternalCheckBoxChange
+        TabOrder = 0
+        Left = 6
+        Height = 20
+        Top = 7
+        Width = 150
+      end
+      object UseExternalLibnameCheckBox: TCheckBox
+        BorderSpacing.Top = 6
+        Caption = 'UseExternalLibnameCheckBox'
+        OnChange = UseExternalLibnameCheckBoxChange
+        TabOrder = 1
+        AnchorSideTop.Control = UseExternalCheckBox
+        AnchorSideTop.Side = asrBottom
+        Left = 6
+        Height = 20
+        Top = 33
+        Width = 197
+      end
+      object ConstantsInsteadOfEnumsCheckBox: TCheckBox
+        BorderSpacing.Top = 6
+        Caption = 'ConstantsInsteadOfEnumsCheckBox'
+        OnChange = ConstantsInsteadOfEnumsCheckBoxChange
+        TabOrder = 2
+        AnchorSideTop.Control = UseExternalLibnameCheckBox
+        AnchorSideTop.Side = asrBottom
+        Left = 6
+        Height = 20
+        Top = 59
+        Width = 229
+      end
+      object IncludeFileCheckBox: TCheckBox
+        BorderSpacing.Top = 6
+        Caption = 'IncludeFileCheckBox'
+        OnChange = IncludeFileCheckBoxChange
+        TabOrder = 3
+        AnchorSideTop.Control = ConstantsInsteadOfEnumsCheckBox
+        AnchorSideTop.Side = asrBottom
+        Left = 6
+        Height = 20
+        Top = 85
+        Width = 146
+      end
+      object LibnameEdit: TEdit
+        BorderSpacing.Left = 6
+        BorderSpacing.Top = 6
+        OnEditingDone = LibnameEditEditingDone
+        TabOrder = 4
+        Text = 'LibnameEdit'
+        AnchorSideLeft.Control = LibNameLabel
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideTop.Control = IncludeFileCheckBox
+        AnchorSideTop.Side = asrBottom
+        Left = 93
+        Height = 23
+        Top = 111
+        Width = 113
+      end
+      object PforPointersCheckBox: TCheckBox
+        BorderSpacing.Top = 6
+        Caption = 'PforPointersCheckBox'
+        OnChange = PforPointersCheckBoxChange
+        TabOrder = 5
+        AnchorSideTop.Control = LibnameEdit
+        AnchorSideTop.Side = asrBottom
+        Left = 6
+        Height = 20
+        Top = 140
+        Width = 151
+      end
+      object StripCommentsCheckBox: TCheckBox
+        BorderSpacing.Top = 6
+        Caption = 'StripCommentsCheckBox'
+        OnChange = StripCommentsCheckBoxChange
+        TabOrder = 6
+        AnchorSideTop.Control = PforPointersCheckBox
+        AnchorSideTop.Side = asrBottom
+        Left = 6
+        Height = 20
+        Top = 166
+        Width = 166
+      end
+      object TforTypedefsCheckBox: TCheckBox
+        BorderSpacing.Top = 6
+        Caption = 'TforTypedefsCheckBox'
+        OnChange = TforTypedefsCheckBoxChange
+        TabOrder = 7
+        AnchorSideTop.Control = StripCommentsCheckBox
+        AnchorSideTop.Side = asrBottom
+        Left = 6
+        Height = 20
+        Top = 192
+        Width = 156
+      end
+      object VarParamsCheckBox: TCheckBox
+        BorderSpacing.Top = 6
+        Caption = 'VarParamsCheckBox'
+        OnChange = VarParamsCheckBoxChange
+        TabOrder = 8
+        AnchorSideTop.Control = TforTypedefsCheckBox
+        AnchorSideTop.Side = asrBottom
+        Left = 6
+        Height = 20
+        Top = 218
+        Width = 145
+      end
+      object Win32HeaderCheckBox: TCheckBox
+        BorderSpacing.Top = 6
+        Caption = 'Win32HeaderCheckBox'
+        OnChange = Win32HeaderCheckBoxChange
+        TabOrder = 9
+        AnchorSideTop.Control = VarParamsCheckBox
+        AnchorSideTop.Side = asrBottom
+        Left = 6
+        Height = 20
+        Top = 244
+        Width = 160
+      end
+      object PalmOSSYSTrapCheckBox: TCheckBox
+        BorderSpacing.Top = 6
+        Caption = 'PalmOSSYSTrapCheckBox'
+        OnChange = PalmOSSYSTrapCheckBoxChange
+        TabOrder = 10
+        AnchorSideTop.Control = Win32HeaderCheckBox
+        AnchorSideTop.Side = asrBottom
+        Left = 6
+        Height = 20
+        Top = 270
+        Width = 179
+      end
+      object OutputExtEdit: TEdit
+        BorderSpacing.Left = 6
+        BorderSpacing.Top = 6
+        OnEditingDone = OutputExtEditEditingDone
+        TabOrder = 11
+        Text = 'OutputExtEdit'
+        AnchorSideLeft.Control = OutputExtLabel
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideTop.Control = PalmOSSYSTrapCheckBox
+        AnchorSideTop.Side = asrBottom
+        Left = 98
+        Height = 23
+        Top = 296
+        Width = 80
+      end
+      object OutputDirEdit: TEdit
+        BorderSpacing.Left = 6
+        BorderSpacing.Top = 6
+        OnEditingDone = OutputDirEditEditingDone
+        TabOrder = 12
+        Text = 'OutputDirEdit'
+        AnchorSideLeft.Control = OutputDirLabel
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideTop.Control = OutputExtEdit
+        AnchorSideTop.Side = asrBottom
+        Left = 97
+        Height = 23
+        Top = 325
+        Width = 397
+      end
+      object OutputDirBrowseButton: TButton
+        Anchors = [akTop, akLeft, akBottom]
+        BorderSpacing.InnerBorder = 4
+        Caption = '...'
+        OnClick = OutputDirBrowseButtonClick
+        TabOrder = 13
+        AnchorSideLeft.Control = OutputDirEdit
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideTop.Control = OutputDirEdit
+        AnchorSideBottom.Control = OutputDirEdit
+        AnchorSideBottom.Side = asrBottom
+        Left = 494
+        Height = 23
+        Top = 325
+        Width = 32
+      end
+    end
+    object SettingsTabSheet: TTabSheet
+      Caption = 'SettingsTabSheet'
+      ClientHeight = 435
+      ClientWidth = 781
+      Left = 2
+      Height = 435
+      Top = 28
+      Width = 781
+      object H2PasFilenameLabel: TLabel
+        Caption = 'H2PasFilenameLabel'
+        Color = clNone
+        ParentColor = False
+        AnchorSideTop.Control = H2PasFilenameEdit
+        AnchorSideTop.Side = asrCenter
+        Left = 6
+        Height = 13
+        Top = 9
+        Width = 120
+      end
+      object OpenLastProjectOnStartCheckBox: TCheckBox
+        Caption = 'OpenLastProjectOnStartCheckBox'
+        OnChange = OpenLastProjectOnStartCheckBoxChange
+        TabOrder = 0
+        Left = 6
+        Height = 20
+        Top = 42
+        Width = 219
+      end
+      object SaveSettingsAsButton: TButton
+        AutoSize = True
+        BorderSpacing.InnerBorder = 4
+        Caption = 'SaveSettingsAsButton'
+        OnClick = SaveSettingsAsButtonClick
+        TabOrder = 1
+        Left = 6
+        Height = 26
+        Top = 82
+        Width = 137
+      end
+      object H2PasFilenameEdit: TEdit
+        BorderSpacing.Left = 6
+        BorderSpacing.Top = 6
+        OnEditingDone = H2PasFilenameEditEditingDone
+        TabOrder = 2
+        Text = 'H2PasFilenameEdit'
+        AnchorSideLeft.Control = H2PasFilenameLabel
+        AnchorSideLeft.Side = asrBottom
+        Left = 132
+        Height = 23
+        Top = 4
+        Width = 352
+      end
+      object h2pasFilenameBrowseButton: TButton
+        Anchors = [akTop, akLeft, akBottom]
+        BorderSpacing.InnerBorder = 4
+        Caption = '...'
+        OnClick = h2pasFilenameBrowseButtonClick
+        TabOrder = 3
+        AnchorSideLeft.Control = H2PasFilenameEdit
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideTop.Control = H2PasFilenameEdit
+        AnchorSideBottom.Control = H2PasFilenameEdit
+        AnchorSideBottom.Side = asrBottom
+        Left = 484
+        Height = 23
+        Top = 4
+        Width = 35
+      end
+    end
+  end
+  object OpenSettingsButton: TButton
+    Anchors = [akLeft, akBottom]
+    AutoSize = True
+    BorderSpacing.Around = 5
+    BorderSpacing.InnerBorder = 4
+    Caption = 'OpenSettingsButton'
+    OnClick = OpenSettingsButtonClick
+    TabOrder = 1
+    AnchorSideLeft.Control = Owner
+    AnchorSideBottom.Control = Owner
+    AnchorSideBottom.Side = asrBottom
+    Left = 5
+    Height = 26
+    Top = 470
+    Width = 124
+  end
+  object SaveSettingsButton: TButton
+    Anchors = [akLeft, akBottom]
+    AutoSize = True
+    BorderSpacing.Around = 5
+    BorderSpacing.InnerBorder = 4
+    Caption = 'SaveSettingsButton'
+    OnClick = SaveSettingsButtonClick
+    TabOrder = 2
+    AnchorSideLeft.Control = OpenSettingsButton
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideBottom.Control = Owner
+    AnchorSideBottom.Side = asrBottom
+    Left = 134
+    Height = 26
+    Top = 470
+    Width = 122
+  end
+  object CloseButton: TButton
+    Anchors = [akRight, akBottom]
+    AutoSize = True
+    BorderSpacing.Around = 5
+    BorderSpacing.InnerBorder = 4
+    Caption = 'CloseButton'
+    OnClick = CloseButtonClick
+    TabOrder = 3
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    AnchorSideBottom.Control = Owner
+    AnchorSideBottom.Side = asrBottom
+    Left = 699
+    Height = 26
+    Top = 470
+    Width = 81
   end
 end
