--- a/ide/lazdocfrm.lfm
+++ b/ide/lazdocfrm.lfm
@@ -1,54 +1,41 @@
 object LazDocForm: TLazDocForm
+  Left = 387
+  Height = 117
+  Top = 623
+  Width = 753
+  HorzScrollBar.Page = 752
+  VertScrollBar.Page = 116
   BorderStyle = bsSizeToolWin
   Caption = 'LazDoc editor'
-  ClientHeight = 117
-  ClientWidth = 753
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   OnResize = FormResize
-  PixelsPerInch = 95
-  HorzScrollBar.Page = 752
-  VertScrollBar.Page = 116
-  Left = 390
-  Height = 117
-  Top = 624
-  Width = 753
   object PageControl: TPageControl
-    ActivePage = ErrorsTabSheet
-    Align = alClient
-    TabIndex = 2
-    TabOrder = 0
-    TabPosition = tpBottom
     Left = 17
     Height = 117
     Width = 736
+    ActivePage = InheritedTabSheet
+    Align = alClient
+    TabIndex = 5
+    TabOrder = 0
+    TabPosition = tpBottom
     object ShortTabSheet: TTabSheet
       Caption = 'ShortTabSheet'
-      ClientHeight = 87
-      ClientWidth = 732
-      Left = 2
-      Height = 87
-      Top = 2
-      Width = 732
       object ShortEdit: TEdit
+        Height = 23
+        Width = 730
         Align = alTop
         BorderSpacing.Right = 2
         OnChange = DocumentationTagChange
         TabOrder = 0
         Text = 'ShortEdit'
-        Height = 23
-        Width = 730
       end
     end
     object DescrTabSheet: TTabSheet
       Caption = 'DescrTabSheet'
-      ClientHeight = 87
-      ClientWidth = 732
-      Left = 2
-      Height = 87
-      Top = 2
-      Width = 732
       object DescrMemo: TMemo
+        Height = 83
+        Width = 730
         Align = alClient
         BorderSpacing.Right = 2
         BorderSpacing.Bottom = 4
@@ -57,19 +44,13 @@ object LazDocForm: TLazDocForm
         )
         OnChange = DocumentationTagChange
         TabOrder = 0
-        Height = 83
-        Width = 730
       end
     end
     object ErrorsTabSheet: TTabSheet
       Caption = 'ErrorsTabSheet'
-      ClientHeight = 87
-      ClientWidth = 732
-      Left = 2
-      Height = 87
-      Top = 2
-      Width = 732
       object ErrorsMemo: TMemo
+        Height = 83
+        Width = 730
         Align = alClient
         BorderSpacing.Right = 2
         BorderSpacing.Bottom = 4
@@ -78,19 +59,14 @@ object LazDocForm: TLazDocForm
         )
         OnChange = DocumentationTagChange
         TabOrder = 0
-        Height = 83
-        Width = 730
       end
     end
     object SeeAlsoTabSheet: TTabSheet
       Caption = 'SeeAlsoTabSheet'
-      ClientHeight = 87
-      ClientWidth = 732
-      Left = 2
-      Height = 87
-      Top = 2
-      Width = 732
       object LinkListBox: TListBox
+        Height = 56
+        Top = 27
+        Width = 730
         Align = alBottom
         Anchors = [akTop, akLeft, akRight, akBottom]
         BorderSpacing.Right = 2
@@ -98,97 +74,121 @@ object LazDocForm: TLazDocForm
         OnClick = LinkListBoxClick
         TabOrder = 0
         TopIndex = -1
-        Height = 56
-        Top = 27
-        Width = 730
       end
       object AddLinkButton: TButton
+        AnchorSideRight.Control = DeleteLinkButton
+        Left = 521
+        Height = 26
+        Width = 95
         Anchors = [akTop, akRight]
         AutoSize = True
         BorderSpacing.Right = 6
-        
+        BorderSpacing.InnerBorder = 4
         Caption = 'AddLinkButton'
         OnClick = AddLinkButtonClick
         TabOrder = 1
-        AnchorSideRight.Control = DeleteLinkButton
-        Left = 574
-        Height = 23
-        Width = 75
       end
       object DeleteLinkButton: TButton
+        Left = 622
+        Height = 26
+        Width = 108
         Anchors = [akTop, akRight]
         AutoSize = True
-        
+        BorderSpacing.InnerBorder = 4
         Caption = 'DeleteLinkButton'
         OnClick = DeleteLinkButtonClick
         TabOrder = 2
-        Left = 655
-        Height = 23
-        Width = 75
       end
       object LinkTextEdit: TEdit
+        AnchorSideLeft.Control = LinkIdComboBox
+        AnchorSideLeft.Side = asrBottom
+        AnchorSideRight.Control = AddLinkButton
+        Left = 229
+        Height = 21
+        Top = 1
+        Width = 288
+        Anchors = [akTop, akLeft, akRight]
+        BorderSpacing.Left = 4
+        BorderSpacing.Right = 4
         OnChange = LinkChange
         TabOrder = 3
         Text = 'LinkTextEdit'
-        Left = 235
-        Height = 21
-        Top = 1
-        Width = 328
       end
       object LinkIdComboBox: TComboBox
+        Height = 21
+        Top = 1
+        Width = 225
         AutoCompleteText = [cbactEndOfLineComplete, cbactSearchAscending]
         MaxLength = 0
         OnChange = LinkChange
         TabOrder = 4
         Text = 'LinkIdComboBox'
-        Height = 21
-        Top = 1
-        Width = 227
       end
     end
     object ExampleTabSheet: TTabSheet
       Caption = 'ExampleTabSheet'
-      ClientHeight = 87
-      ClientWidth = 732
-      Left = 2
-      Height = 87
-      Top = 2
-      Width = 732
       object ExampleEdit: TEdit
+        Height = 23
+        Width = 730
         Align = alTop
         BorderSpacing.Right = 2
         OnChange = DocumentationTagChange
         TabOrder = 0
         Text = 'ExampleEdit'
-        Height = 23
-        Width = 730
       end
       object BrowseExampleButton: TButton
+        Left = 593
+        Height = 26
+        Top = 28
+        Width = 137
         Anchors = [akTop, akRight]
         AutoSize = True
-        
+        BorderSpacing.InnerBorder = 4
         Caption = 'BrowseExampleButton'
         OnClick = BrowseExampleButtonClick
         TabOrder = 1
-        Left = 655
-        Height = 25
-        Top = 28
-        Width = 75
+      end
+    end
+    object InheritedTabSheet: TTabSheet
+      Caption = 'InheritedTabSheet'
+      TabVisible = False
+      object InheritedShortLabel: TLabel
+        Left = 5
+        Height = 13
+        Top = 4
+        Width = 109
+        Caption = 'InheritedShortLabel'
+        Color = clNone
+        ParentColor = False
+      end
+      object InheritedShortEdit: TEdit
+        AnchorSideLeft.Control = InheritedTabSheet
+        AnchorSideTop.Control = InheritedShortLabel
+        AnchorSideTop.Side = asrBottom
+        AnchorSideRight.Control = InheritedTabSheet
+        AnchorSideRight.Side = asrBottom
+        Height = 23
+        Top = 19
+        Width = 732
+        Anchors = [akTop, akLeft, akRight]
+        BorderSpacing.Top = 2
+        TabOrder = 0
+        Text = 'InheritedShortEdit'
       end
     end
   end
   object Panel1: TPanel
+    Height = 117
+    Width = 17
     Align = alLeft
     BevelOuter = bvNone
-    ClientHeight = 117
-    ClientWidth = 17
     FullRepaint = False
     ParentShowHint = False
     ShowHint = True
     TabOrder = 1
-    Height = 117
-    Width = 17
     object BoldFormatButton: TSpeedButton
+      Height = 17
+      Width = 17
       Align = alTop
       Color = clBtnFace
       Glyph.Data = {
@@ -209,10 +209,12 @@ object LazDocForm: TLazDocForm
       }
       NumGlyphs = 0
       OnClick = FormatButtonClick
-      Height = 17
-      Width = 17
     end
     object ItalicFormatButton: TSpeedButton
+      Tag = 1
+      Height = 17
+      Top = 17
+      Width = 17
       Align = alTop
       Color = clBtnFace
       Glyph.Data = {
@@ -234,12 +236,12 @@ object LazDocForm: TLazDocForm
       }
       NumGlyphs = 0
       OnClick = FormatButtonClick
-      Height = 17
-      Top = 17
-      Width = 17
-      Tag = 1
     end
     object UnderlineFormatButton: TSpeedButton
+      Tag = 2
+      Height = 17
+      Top = 34
+      Width = 17
       Align = alTop
       Color = clBtnFace
       Glyph.Data = {
@@ -261,12 +263,12 @@ object LazDocForm: TLazDocForm
       }
       NumGlyphs = 0
       OnClick = FormatButtonClick
-      Height = 17
-      Top = 34
-      Width = 17
-      Tag = 2
     end
     object InsertCodeTagButton: TSpeedButton
+      Tag = 3
+      Height = 17
+      Top = 51
+      Width = 17
       Align = alTop
       Color = clBtnFace
       Glyph.Data = {
@@ -353,12 +355,12 @@ object LazDocForm: TLazDocForm
       }
       NumGlyphs = 0
       OnClick = FormatButtonClick
-      Height = 17
-      Top = 51
-      Width = 17
-      Tag = 3
     end
     object InsertRemarkButton: TSpeedButton
+      Tag = 4
+      Height = 17
+      Top = 68
+      Width = 17
       Align = alTop
       Color = clBtnFace
       Glyph.Data = {
@@ -380,12 +382,12 @@ object LazDocForm: TLazDocForm
       }
       NumGlyphs = 0
       OnClick = FormatButtonClick
-      Height = 17
-      Top = 68
-      Width = 17
-      Tag = 4
     end
     object InsertVarTagButton: TSpeedButton
+      Tag = 5
+      Height = 17
+      Top = 85
+      Width = 17
       Align = alTop
       Color = clBtnFace
       Glyph.Data = {
@@ -415,17 +417,12 @@ object LazDocForm: TLazDocForm
       }
       NumGlyphs = 0
       OnClick = FormatButtonClick
-      Height = 17
-      Top = 85
-      Width = 17
-      Tag = 5
     end
   end
   object OpenDialog: TOpenDialog
     Title = 'Open example file'
     Filter = 'pascal file|*.pas; *.pp; *.p'
     FilterIndex = 0
-    Title = 'Open example file'
     left = 64
     top = 24
   end
